# opencv_server_source

./: .gitignore  CMakeLists.txt  CMakeLists_TEST_DETECT_FACE.txt  FindZBar0.cmake  README.txt  config.h  detect_face.h  detect_size.h  detect_symbols.h  lib.h  main.cpp  roy_system.h  score.h
core/: detect_face.h  detect_size.h  detect_symbols.h  face_handler.h  shape_handler.h  symbol_handler.h
lib/: lib.h  roy_system.h
opencv_server/: CMakeLists.txt  GCC_BUILD_README.txt  config.h  detect_size.h  detect_symbols.h  lib.h  main.cpp  test_detect_face.cpp  test_detect_face.h
